feat: Implement template publishing functionality with Vercel Blob integration and an enhanced admin editor.

--- a/admin.html
+++ b/admin.html
@@ -80,8 +80,10 @@
             <button class="btn btn-outline-light btn-sm" id="btnNew" title="New Template"><i class="fa-solid fa-file"></i></button>
             <button class="btn btn-outline-light btn-sm" id="btnImport" title="Import JSON"><i class="fa-solid fa-upload"></i></button>
             <button class="btn btn-outline-light btn-sm" id="btnExport" title="Download JSON"><i class="fa-solid fa-download"></i></button>
+            <button class="btn btn-outline-light btn-sm" id="btnExport" title="Download JSON"><i class="fa-solid fa-download"></i></button>
             <div class="vr bg-secondary mx-1"></div>
-            <button class="btn btn-primary btn-sm px-3" id="btnShareLink"><i class="fa-solid fa-link me-1"></i> Share Link</button>
+            <button class="btn btn-success btn-sm px-3" id="btnPublish" onclick="App.publishTemplate()"><i class="fa-solid fa-cloud-arrow-up me-1"></i> Publish</button>
+            <button class="btn btn-primary btn-sm px-3" id="btnShareLink"><i class="fa-solid fa-link me-1"></i> Share</button>
         </div>
     </nav>
 
